--- a/deps_src/rebar.config
+++ b/deps_src/rebar.config
@@ -1,4 +1,5 @@
 %% -*- mode: erlang -*-
+{plugins, [rebar3_hex, pc]}.
 {deps, [
         {getopt, 
          {git, "https://github.com/roowe/getopt", 
