新增connect/oauth2/authorize

--- a/deps_source/rebar.config
+++ b/deps_source/rebar.config
@@ -12,6 +12,8 @@
         {jiffy, ".*",
          {git, "https://github.com/davisp/jiffy", 
           {branch, "master"}}},
+        {bbmustache, 
+         {git, "git://github.com/soranoba/bbmustache.git", {branch, "master"}}},
         {cowboy,
          {git, "git://github.com/ninenines/cowboy.git", {branch, "master"}}}
        ]}.
