完成充值通知

--- a/deps_source/rebar.config
+++ b/deps_source/rebar.config
@@ -15,7 +15,10 @@
         {bbmustache, 
          {git, "git://github.com/soranoba/bbmustache.git", {branch, "master"}}},
         {cowboy,
-         {git, "git://github.com/ninenines/cowboy.git", {branch, "master"}}}
+         {git, "git://github.com/ninenines/cowboy.git", {branch, "master"}}},
+        {ibrowse, 
+         {git, "https://github.com/cmullaparthi/ibrowse",
+          {branch, "master"}}}
        ]}.
 
 
