--- a/data/data.conf.template
+++ b/data/data.conf.template
@@ -1,6 +1,6 @@
 [
     {
-        "app_id":"wx2421b1c4370ec43b",
+        "app_id":"wx5432dc1dd6164d4e",
         "secret":"secret1",
         "mch_id":"10000100",
         "mch_secret":"mch_secret",
